--- a/amenities.html
+++ b/amenities.html
@@ -127,7 +127,30 @@
     </table>
 </nav>
 </div>      <!-- id=navbar  -->
-        <h1>Yankee Trail - Amenities Overview</h1> <br />
+        <h1>Yankee Trail - Amenities Overview</h1><br />
+ <br />
+ 
+			<p class="Text"><span class="Text---Amenity-Type">Rest rooms, water: </span>in the town park on the south end of Wellsburg. </p>
+			<p class="Text"><span class="Text---Amenity-Type">Bike shop, rentals: </span>none</p>
+			<p class="Text"><span class="Text---Amenity-Type">Restaurant, groceries: </span>Kroger supermarket at the 27 St trailhead. Several restaurants in Wellsburg, both along Charles Street and US2. Also marina restaurant at 12 th St and the river.</p>
+			<p class="Text"><span class="Text---Amenity-Type">Camping, simple lodging: </span>Blue Chip Motel on the south end of town</p>
+			<p class="Text"><span class="Text---Amenity-Type">Swimming, fishing: </span>Fishing in Ohio River. We have no information on water quality.</p>
+			<p class="Text"><span class="Text---Amenity-Type">Wheelchair access: </span>Trailhead OK. In Wellsburg, there are some on the road sections, which travel neighborhood streets. There is a grade, both up and down at the edge of town, where the trail drops about 20 feet from railroad grade to street level and back to railroad grade. </p>
+			<p <p style='text-size:larger; text-weight:bold;' >Summary</span> Supermarket, restaurants, motel</p> <br />
+<p > Amenities are organized by major trailheads.
+        These trailheads are listed in order from the start of the trail to the end of the trail.
+        In the trailhead listing the amenities are grouped around the nearest access place, and listed in the order of
+        those closest to the trailhead to those farthest from the trailhead.
+        </p> <br />
+<table maxwidth='400px'><tr  >
+<th align='left'  >fROM Mile</th><th>&nbsp;</th>
+<th align='left'  >AROUND Amenity</th><th>&nbsp;</th>
+<th align='left'  >TO MILE</th><th>&nbsp;</th>
+<th align='left'  > &nbsp; </th><th>&nbsp;</th>
+</tr>
+</table><br />
+<p > The following table amenities in oder of their access point along the trail.
+        if there are mulitpla amenities of the same type at a given access point ther are listed in cloest to farthest from the access point. <br />
  <br />
  <div id="trailer" class="menucolor" style="z-level:1;">Yankee Trail - Oldest segment segment check 2024-Jun  &nbsp; &nbsp; &nbsp; &nbsp; This page brought to you by the book
         <button onclick="window.location.href='https://freewheelingeasy.com/';" class="menucolor"  >FreeWheeling Easy in Western Pennsylvania</button>
